--- a/starter/index.html
+++ b/starter/index.html
@@ -30,10 +30,10 @@
         <div id="choices" class="choices">
 
 
-          <button id="Answer1"> </button>
-          <button id="Answer2"> </button>
-          <button id="Answer3"> </button>
-          <button id="Answer4"> </button>
+          <button class="ans" id="Answer1"> </button>
+          <button class="ans" id="Answer2"> </button>
+          <button class="ans" id="Answer3"> </button>
+          <button class="ans" id="Answer4"> </button>
 
         </div>
         
